update units to be relative to viewport

--- a/src/styles/sass/components/_button.scss
+++ b/src/styles/sass/components/_button.scss
@@ -23,7 +23,7 @@
   color: var(--btn-primary-color);
 
   border-bottom: 5px solid var(--btn-primary-shadow);
-  font-size: 1.8rem;
+  font-size: clamp(1.5rem,5vw,1.8rem);
 }
 
 .btn--secondary {
