--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -20,7 +20,7 @@
   background-color: var(--btn-primary-bg);
   color: var(--btn-primary-color);
   border-bottom: 5px solid var(--btn-primary-shadow);
-  font-size: 1.8rem;
+  font-size: clamp(1.5rem, 5vw, 1.8rem);
 }
 
 .btn--secondary {
@@ -122,7 +122,7 @@ main {
 
 .calc {
   display: flex;
-  gap: 2em;
+  gap: 1.5em;
   flex-flow: column nowrap;
   align-items: stretch;
   width: min(540px, 80vw);
@@ -167,7 +167,7 @@ main {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   padding: 2em;
-  gap: 1em;
+  gap: min(3vw, 1.25em);
   background-color: var(--btn-grid-bg);
   border: none;
   border-radius: 0.5em;
